--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "nconf": "*",
     "validator": "*",
     "jquery": "*",
-    "request-json": "*"
+    "request-json": "*",
     "hellojs":"1.18.4"
   }
 }
